src/test/resources/valid/char-literal.c
int foo() {
  return (int)'\n';
}
