src/test/resources/parse-error/label-redefinition.c
int f() {
  int x;
 L:
  x = 9;
 L:
}
